--- a/week3_Pytorch_실습.ipynb
+++ b/week3_Pytorch_실습.ipynb
@@ -1415,7 +1415,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# gradient를 초기화해주는 함수입니다(PPT 참고)"
+        "# gradient를 초기화해주는 함수입니다"
       ],
       "metadata": {
         "id": "xAHX2cxytmNv"
